WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81734
REGRESSION (
r110780
): Loading a PDF always makes the WKView layer backed
https://bugs.webkit.org/show_bug.cgi?id=81734
Summary
REGRESSION (r110780): Loading a PDF always makes the WKView layer backed
Anders Carlsson
Reported
2012-03-20 20:52:48 PDT
REGRESSION (
r110780
): Loading a PDF always makes the WKView layer backed
Attachments
Patch
(1.51 KB, patch)
2012-03-20 20:54 PDT
,
Anders Carlsson
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-20 20:54:38 PDT
Created
attachment 132959
[details]
Patch
Anders Carlsson
Comment 2
2012-03-20 21:02:29 PDT
Committed
r111493
: <
http://trac.webkit.org/changeset/111493
>
Anders Carlsson
Comment 3
2012-03-22 09:49:08 PDT
***
Bug 81566
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 4
2012-03-22 10:45:35 PDT
***
Bug 81876
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug