REGRESSION (r110780): Loading a PDF always makes the WKView layer backed https://bugs.webkit.org/show_bug.cgi?id=81734 <rdar://problem/11088172>

Reviewed by Adele Peterson.

* UIProcess/API/mac/WKView.mm:
(-[WKView _setPageHasCustomRepresentation:]):
Don't call -[NSView setWantsLayer:], the web process already takes care of entering and exiting
accelerated compositing mode for us.

Canonical link: https://commits.webkit.org/98996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111493 268f45cc-cd09-0410-ab3c-d52691b4dbfc